feat: changed suit name

--- a/src/app/components/playing-card/playing-card.component.html
+++ b/src/app/components/playing-card/playing-card.component.html
@@ -1,13 +1,13 @@
 <div class="card">
   <div class="display-top">
-    <span class="number {{ suit | naipeColorized }}">{{ card }}</span>
-    <span class="suit {{ suit | naipeColorized }}">{{ suit }}</span>
+    <span class="number {{ suit | suitColorized }}">{{ card }}</span>
+    <span class="suit {{ suit | suitColorized }}">{{ suit }}</span>
   </div>
   <div class="display-middle">
-    <span class="suit {{ suit | naipeColorized }}">{{ suit }}</span>
+    <span class="suit {{ suit | suitColorized }}">{{ suit }}</span>
   </div>
   <div class="display-bottom">
-    <span class="number {{ suit | naipeColorized }}">{{ card }}</span>
-    <span class="suit {{ suit | naipeColorized }}">{{ suit }}</span>
+    <span class="number {{ suit | suitColorized }}">{{ card }}</span>
+    <span class="suit {{ suit | suitColorized }}">{{ suit }}</span>
   </div>
 </div>
